--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,14 @@
           <%= render "layouts/header" %>
         </div>
       </div>
+      <div class="flash">
+        <% if notice %>
+          <div class="notice"><%= notice %></div>
+        <% end %>
+        <% if alert %>
+          <div class="alert"><%= alert %></div>
+        <% end %>
+      </div>
       <%= yield %>
     </div>
   </body>
