--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,2 +1,24 @@
-<h1>Public::Users#show</h1>
-<p>Find me in app/views/public/users/show.html.erb</p>
+<div class="row">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-3">
+        <section class="user-info">
+          <h4>ユーザー情報</h4>
+          <table class="table table-hover">
+            <tr class="row">
+              <th class="col-sm-4">名前</th><td class="col-sm-8"><%= @user.name %></td>
+            </tr>
+          </table>
+          <div class="text-center">
+            ブログを作成する
+          </div>
+        </section>
+      </div>
+      <div class="col-sm-9">
+        <section class="blog-box">
+          <h4>ブログ一覧</h4>
+        </section>
+      </div>
+    </div>
+  </div>
+</div>
