--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Public::Users#index</h1>
-<p>Find me in app/views/public/users/index.html.erb</p>
+<div class="row">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1">
+        <h2 class="text-center">ユーザーリスト</h2>
+        <table class="table">
+          <thead class="row">
+            <th class="col-sm-6">名前</th>
+            <th class="col-sm-3">ブログ件数</th>
+            <th class="col-sm-3"></th>
+          </thead>
+          <tbody>
+            <%= render @users %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
