--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -6,7 +6,14 @@
           <h4>ユーザー情報</h4>
           <table class="table table-hover">
             <tr class="row">
-              <th class="col-sm-4">名前</th><td class="col-sm-8"><%= @user.name %></td>
+              <th class="col-sm-4">名前</th>
+              <td class="col-sm-8"><%= @user.name %></td>
+            </tr>
+            <% if @user.current_user?(session[:user]) %>
+              <tr class="row">
+                <td class="col-sm-10 text-center"><%= link_to "編集", edit_user_path(@user) %></td>
+              </tr>
+            <% end %>
             </tr>
           </table>
           <div class="text-center">
