--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -7,11 +7,11 @@
           
         </div>
         <div class="col-sm-6">
-          <div class="form-group form-inline">
+          <div class="form-group">
             <%= f.label :name, "名前", class: "control-label" %><br>
             <%= f.text_field :name, class: "form-control" %>
           </div>
-          <div class="form-group form-inline">
+          <div class="form-group">
           </div>
           </div>
         </div>
