feature jquery-validation

--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <h2 class="text-center"><%= @user.name %>の編集</h2>
-      <%= form_with model: @user, local: true do |f| %>
+      <%= form_with model: @user, local: true, id: "user_form" do |f| %>
         <div class="col-sm-4 col-sm-offset-1">
           
         </div>
