--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -2,24 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-3">
-        <section class="user-info">
-          <h4>ユーザー情報</h4>
-          <table class="table table-hover">
-            <tr class="row">
-              <th class="col-sm-4">名前</th>
-              <td class="col-sm-8"><%= @user.name %></td>
-            </tr>
-            <% if @user.current_user?(session[:user]) %>
-              <tr class="row">
-                <td class="col-sm-10 text-center"><%= link_to "編集", edit_user_path(@user) %></td>
-              </tr>
-            <% end %>
-            </tr>
-          </table>
-          <div class="text-center">
-            ブログを作成する
-          </div>
-        </section>
+        <%= render "layouts/userinfo", user: @user %>
+
       </div>
       <div class="col-sm-9">
         <section class="blog-box">
