making homepage-new

--- a/app/views/public/homepages/new.html.erb
+++ b/app/views/public/homepages/new.html.erb
@@ -1,2 +1,26 @@
-<h1>Public::Homepages#new</h1>
-<p>Find me in app/views/public/homepages/new.html.erb</p>
+<div class="row">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1">
+        <h2>ホームページ作成</h2>
+        <%= form_with model: @homepage, local: true do |f| %>
+          <div class="form-group">
+            <%= f.label :title, "タイトル※必須", class: "control-label" %><br>
+            <%= f.text_field :title, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :introduction, "紹介文", class: "control-label" %><br>
+            <%= f.text_area :introduction, rows: 10, cols: 30, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :agreement, "同意する", class: "control-label" %>
+            <%= f.check_box :agreement %>
+          </div>
+          <div class="submit-box text-center">
+            <%= f.submit "作成" %>
+          </div>
+        <% end %>
+      </div>      
+    </div>
+  </div>
+</div>
