--- a/app/views/public/homepages/new.html.erb
+++ b/app/views/public/homepages/new.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1">
         <h2>ホームページ作成</h2>
-        <%= form_with model: @homepage, local: true do |f| %>
+        <%= form_with model: @homepage, url: user_homepages_path(user_id: @user.id), id: "homepage_form", local: true do |f| %>
           <div class="form-group">
             <%= f.label :title, "タイトル※必須", class: "control-label" %><br>
             <%= f.text_field :title, class: "form-control" %>
