--- a/app/views/public/homepages/show.html.erb
+++ b/app/views/public/homepages/show.html.erb
@@ -1,2 +1,23 @@
-<h1>Public::Homepages#show</h1>
-<p>Find me in app/views/public/homepages/show.html.erb</p>
+<div class="row">
+  <div class="conatiner">
+    <div class="row">
+      <div class="col-sm-9">
+        <section class="main">
+          <h2><%= @homepage.title %></h2>
+          <% if @article.present? %>
+            <h4><%= @article.title %></h4>
+            <p><%= @article.content %></p>
+            <p><%= @article.created_at.strftime("%Y/%m/%d %H:%M:%S") %></p>
+          <% else %>
+            <h4>まだ記事はございません。</h4>
+          <% end %>
+        </section>
+      </div>
+      <div class="col-sm-3">
+        <section class="sidebar">
+          
+        </section>
+      </div>
+    </div>
+  </div>
+</div>
