finish simple homepage-show

--- a/app/views/public/homepages/show.html.erb
+++ b/app/views/public/homepages/show.html.erb
@@ -15,7 +15,9 @@
       </div>
       <div class="col-sm-3">
         <section class="sidebar">
-          
+          <div class="text-center">
+            <%= link_to "記事を追加する", new_homepage_article_path(@homepage) %>
+          </div>
         </section>
       </div>
     </div>
