finish article-edit / update

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,15 @@
 .padding-right-lg{
   padding-right: 50px;
 }
+
+.margin-bottom-sm{
+  margin-bottom: 15px;
+}
+
+.margin-bottom-md{
+  margin-bottom: 30px;
+}
+
+.margin-bottom-lg{
+  margin-bottom: 45px;
+}
