--- a/app/views/public/articles/edit.html.erb
+++ b/app/views/public/articles/edit.html.erb
@@ -1,2 +1,27 @@
-<h1>Public::Articles#edit</h1>
-<p>Find me in app/views/public/articles/edit.html.erb</p>
+<div class="row">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1">
+        <h2>記事編集</h2>
+        <%= form_with model: @article, url: article_path(@article), local: true do |f| %>
+          <%= render "layouts/error", resource: @article %>
+          <div class="form-group form-inline">
+            <%= f.label :title, "タイトル", class: "control-label" %><br>
+            <%= f.text_field :title, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :content, "本文", class: "control-label" %><br>
+            <%= f.text_area :content, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :tag, "タグ(','で区切る)", class: "control-label" %><br>
+            <%= f.text_field :tag, class: "form-control" %>
+          </div>
+          <div class="submit-btn">
+            <%= f.submit "更新", class: "btn btn-primary" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
