--- a/app/views/public/articles/_article.html.erb
+++ b/app/views/public/articles/_article.html.erb
@@ -1,10 +1,10 @@
-<h3 class="margin-bottom-sm"><%= article.title %></h3>
+<h3 class="margin-bottom-sm article-title"><%= article.title %></h3>
 <p>
   <% article.tag.split(",").each do |tag| %>
     <%= tag %>
   <% end %>
 </p>
-<p><%= article.content %></p>
+<p class="article-content"><%= article.content %></p>
 <p>
   <%= article.created_at.strftime("%Y/%m/%d %H:%M:%S") %> 
   <% if @user.current_user?(session[:user]) %>
