--- a/app/views/public/articles/edit.html.erb
+++ b/app/views/public/articles/edit.html.erb
@@ -18,7 +18,8 @@
             <%= f.text_field :tag, class: "form-control" %>
           </div>
           <div class="submit-btn">
-            <%= f.submit "更新", class: "btn btn-primary" %>
+            <%= f.submit "更新", class: "btn btn-primary" %>&emsp;
+            <%= link_to "削除する", article_path, method: :delete, class: "btn btn-danger" %>
           </div>
         <% end %>
       </div>
