--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Public::Articles#index</h1>
-<p>Find me in app/views/public/articles/index.html.erb</p>
+<div class="row">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-9">
+        <section class="main">
+          <h2 class="text-center homepage-title"><%= homepage.title %></h2>
+          <% if article.present? %>
+            <%= render @articles %>
+          <% else %>
+            <h4>まだ記事はございません。</h4>
+          <% end %>
+        </section>
+      </div>
+      <div class="col-sm-3">
+        <section class="sidebar">
+          <div class="text-center">
+            <%= link_to "記事を追加する", new_homepage_article_path(homepage), class: "btn btn-primary" %>
+            <div class="aritlce-list">
+              <% homepage.articles.order("created_at DESC").take(5).each do |article| %>
+                <%= link_to "#{ article.title } #{ article.created_at.strftime("%Y/%m/%d") }", article_path(article) %><br>
+              <% end %>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+</div>
