--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -3,11 +3,15 @@
     <div class="row">
       <div class="col-sm-3">
         <%= render "layouts/userinfo", user: @user %>
-
       </div>
       <div class="col-sm-9">
         <section class="blog-box">
           <h4>ブログ一覧</h4>
+          <div class="homepage-list">
+            <% @user.homepages.each do |homepage| %>
+              <p><%= link_to homepage.title, homepage_path(homepage) %></p>
+            <% end %>
+          </div>
         </section>
       </div>
     </div>
