finish article-index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,3 +47,13 @@
     font-size: 30px;
   }
 }
+
+.article-box{
+  border-radius: 3px;
+  padding: 5px 15px;
+}
+
+.article-list{
+  background-color: yellow;
+  padding: 5px;
+}
